--- a/revelapp/app/views/App/Index.html
+++ b/revelapp/app/views/App/Index.html
@@ -1,23 +1,16 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
 
-<header class="hero-unit" style="background-color:#A9F16C">
-  <div class="container">
-    <div class="row">
-      <div class="hero-text">
-        <h1>It works!</h1>
-        <p></p>
-      </div>
-    </div>
-  </div>
-</header>
+<h1>Githhub!</h1>
 
-<div class="container">
-  <div class="row">
-    <div class="span6">
-      {{template "flash.html" .}}
-    </div>
-  </div>
-</div>
+<p>This is an oauth2 example using GitHub that I modified from the Facebook example provided by Revel</p>
+
+{{if .me}}
+<h3>You're {{.me.name}} on GitHub</h3>
+<img src="" />
+
+{{else}}
+<a href="{{.authUrl}}">login</a>
+{{end}}
 
 {{template "footer.html" .}}
