cleaned up code

--- a/revelapp/app/views/App/Index.html
+++ b/revelapp/app/views/App/Index.html
@@ -3,7 +3,7 @@
 
 <h1>Githhub!</h1>
 
-<p>This is an oauth2 example using GitHub that I modified from the Facebook example provided by Revel</p>
+<p>This is an oauth2 example using GitHub oauth2 that I modified from the Facebook outh example provided by Revel</p>
 
 {{if .me}}
 <h3>You're {{.me.name}} on GitHub</h3>
