Updated code to use Google oauth2 as an example before trying to access the JWT Token and using OpenID Connect

--- a/revelapp/app/views/App/Index.html
+++ b/revelapp/app/views/App/Index.html
@@ -1,12 +1,12 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
 
-<h1>Githhub!</h1>
+<h1>Google!</h1>
 
-<p>This is an oauth2 example using GitHub oauth2 that I modified from the Facebook outh example provided by Revel</p>
+<p>This is an oauth2 example using GitHub and Google oauth2 that I modified from the Facebook outh example provided by Revel</p>
 
 {{if .me}}
-<h3>You're {{.me.name}} on GitHub</h3>
+<h3>You're {{.me.name}} on Google</h3>
 <img src="" />
 
 {{else}}
