Updated code to clean up the Config Objects

--- a/revelapp/app/views/App/Index.html
+++ b/revelapp/app/views/App/Index.html
@@ -1,7 +1,7 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
 
-<h1>Google!</h1>
+<h1>Login with Google or GitHub!</h1>
 
 <p>This is an oauth2 example using GitHub and Google oauth2 that I modified from the Facebook outh example provided by Revel</p>
 
